<resources>
    <string name="app_name">Coronapp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Death and Recovered List</string>
    <string name="title_map">Map</string>
    <string name="title_list">Confirmed Case List</string>
    <string name="title_tested">Tested Case List</string>
    <string name="title_chart">Confirmed Case Chart</string>

    <string name="title">COVID-19 Dashboard by Epitech with data from the Center for Systems Science and Engineering (CSSE) at Johns Hopkins University(JHU)</string>
    <string name="totalConfirmed">Total Confirmed</string>
    <string name="lastUpdate">Last Updated at (M/D/YYYY)</string>
    <string name="nbCountryTxt">countries/regions</string>
    <string name="credit">Original project lead by JHU CSSE. Automation Support: Esri Living Atlas team and JHU APL. Contact them.</string>
    <string name="date">Selected Date :</string>

    <string name="confirmed1">Confirmed Cases by Country/Region/Sovereignty</string>
    <string name="confirmed2">Confirmed Cases by Province/State/Dependency</string>
    <string name="confirmed3">Confirmed Cases by US County</string>

    <string name="death1">Total Deaths</string>
    <string name="death2">Total Recovered</string>

    <string name="testedTitle">Total Test Conducted in U.S.</string>
    <string name="tested">tested</string>
    <string name="hospitalizedTitle">Total Hospitalized in the U.S.</string>
    <string name="hospitalized">hospitalized</string>
    <string name="us">US</string>
</resources>
