<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.coronapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.coronapp.ui.confirmedList.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_death_list" />


    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.example.coronapp.ui.chart.FragmentTab"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart_tab" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.coronapp.ui.deathList.DeathListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_death_list" />
</navigation>
